[gd_scene load_steps=11 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]
[ext_resource path="res://gfx/background_gradient2.png" type="Texture" id=2]
[ext_resource path="res://gfx/wildcards.png" type="Texture" id=3]
[ext_resource path="res://fonts/Bungee-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 42
font_data = ExtResource( 4 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://fonts/Bungee-Regular.ttf"

[sub_resource type="DynamicFont" id=3]
size = 42
font_data = SubResource( 2 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://fonts/Bungee-Regular.ttf"

[sub_resource type="DynamicFont" id=5]
size = 42
font_data = SubResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 42
font_data = ExtResource( 4 )

[node name="MainMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 2048.0
margin_bottom = 1200.0
texture = ExtResource( 2 )

[node name="Wildcards" type="TextureRect" parent="."]
margin_left = 17.0
margin_top = 386.0
margin_right = 322.0
margin_bottom = 595.0
texture = ExtResource( 3 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -774.167
margin_top = 135.095
margin_right = -244.167
margin_bottom = 343.095
custom_constants/separation = 10

[node name="PlayButton" type="Button" parent="VBoxContainer"]
margin_right = 530.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.898039, 0.823529, 0.0313726, 1 )
text = "PLAY"

[node name="InstructionsButton" type="Button" parent="VBoxContainer"]
margin_top = 59.0
margin_right = 530.0
margin_bottom = 108.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.898039, 0.823529, 0.0313726, 1 )
text = "INSTRUCTIONS"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
visible = false
margin_top = 118.0
margin_right = 530.0
margin_bottom = 167.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.898039, 0.823529, 0.0313726, 1 )
text = "SETTINGS"

[node name="InfoButton" type="Button" parent="VBoxContainer"]
margin_top = 118.0
margin_right = 530.0
margin_bottom = 167.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.898039, 0.823529, 0.0313726, 1 )
text = "INFO"
[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="VBoxContainer/InstructionsButton" to="." method="_on_InstructionsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/InfoButton" to="." method="_on_InfoButton_pressed"]
